--- a/smurfs/src/index.css
+++ b/smurfs/src/index.css
@@ -3,3 +3,50 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.smurf-container {
+  background-color: rgb(106, 106, 231);
+  padding: 20px;
+  margin: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.smurf {
+  background-color: rgb(116, 143, 194);
+  margin: 10px;
+  padding: 10px;
+  width: 50%;
+}
+
+.smurf h2 {
+  font-size: 20px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+}
+
+form {
+  padding: 20px;
+}
+
+input[type=text] {
+  border: 2px solid black;
+  border-radius: 4px;
+  width: 30%;
+  padding: 12px 20px;
+  margin: 8px 8px;
+  box-sizing: border-box;
+}
+
+form button {
+  padding: 20px;
+  border: none;
+  background-color: white;
+  border-radius: 4px;
+  font-size: 20px;
+  cursor: pointer;
+}
